Projet GL/Projet_GL/src/test/deca/context/valid/increment1/bool-init_decompile.deca
{
	boolean b=true;
	boolean c=false;
}
