Projet GL/Projet_GL/src/test/deca/context/invalid/increment2/int-comp-bool.deca
// Test int == bool

// Historique : cree le 11/01/2023

{
    int a = 3;

    boolean b = true;

    b = a == b;
}